--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,14 +1,20 @@
+
 server {
     listen 80;
-    index  index.html index.php;
-    server_name purephp;
-    root /var/www/html;
+    index index.php index.html;
+    server_name _;
+    root /var/www/html/;
 
     location / {
-        try_files $uri $uri/ /api/index.php?$query_string;
+        # if ($http_user_agent !~* "^$") {
+        #     return 403;
+        # }
+        root /var/www/html/static;
+        # try_files /static/index.html =404;
     }
-    # location /api {
-    #     try_files $uri $uri/ /api/index.php?$query_string;
+
+    # location / {
+    #     try_files $uri $uri/ /index.php?$query_string;
     # }
 
     location ~ \.php$ {
@@ -24,17 +30,74 @@ server {
 
 
 
+
+
+
+
+
+
+# server {
+#     listen 80;
+#     server_name yourserver.com; # замените на ваш домен или IP-адрес
+
+#     root /var/www/html;
+#     index index.php index.html;
+
+#     # Разрешаем GET запросы из любых user-agent на /static/index.html
+#     location / {
+#         # if ($http_user_agent !~* "^$") {
+#         #     return 403;
+#         # }
+#         root /var/www/html/static;
+#         # try_files /static/index.html =404;
+#     }
+
+#     # Обрабатываем POST запросы на /api/index.php
+#     location /api/ {
+#         if ($request_method !~* "POST") {
+#             return 405;
+#         }
+#         try_files /api/index.php =404;
+#         include fastcgi_params;
+#         fastcgi_param REQUEST_METHOD $request_method;
+#         fastcgi_pass unix:/run/php/php8.2-fpm.sock; # замените на ваш адрес PHP-FPM сокета
+#     }
+# }
+
+
+
+
+
+
+# server {
+#   listen 80;
+#   index index.php index.html;
+#   root /var/www/html;
+
+#   location / {
+#     if ($request_method == 'GET' ) {
+#         try_files /static/index.html =404;
+#     }
+#     if ($request_method == 'POST' ) {
+#         try_files /api/index.php;
+#     }
+#   }
+# }
+
 # server {
 #     listen 80;
 #     index index.php index.html;
 #     server_name _;
-#     root /var/www/html;
 
 #     location / {
-#         try_files $uri $uri/ /index.php?$query_string;
+#         # try_files $uri $uri/ /index.php?$query_string;
+#         root /var/www/html/static;
 #     }
+#     location =/api/index.php {
+#         # try_files $uri $uri/ /index.php?$query_string;
+#         # root /var/www/html;
 
-#     location ~ \.php$ {
+#         root /var/www/html/api;
 #         try_files $uri =404;
 #         fastcgi_split_path_info ^(.+\.php)(/.+)$;
 #         fastcgi_pass php:9000;
@@ -43,4 +106,44 @@ server {
 #         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 #         fastcgi_param PATH_INFO $fastcgi_path_info;
 #     }
+
+#     location ~ \.php$ {
+#         root /var/www/html/api;
+#         try_files $uri =404;
+#         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+#         fastcgi_pass php:9000;
+#         fastcgi_index index.php;
+#         include fastcgi_params;
+#         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#         fastcgi_param PATH_INFO $fastcgi_path_info;
+#     }
+# }
+
+
+
+# server {
+#     listen 80;
+#     index  index.html index.php;
+#     server_name purephp;
+    
+
+#     location / {
+#         root /var/www/html/static;
+#     }
+#     location /api {
+#         root /var/www/html;
+#         index index.html index.php;
+        
+#         try_files $uri $uri/ /index.php$is_args$args;
+#         location ~ \.php$ {
+#             include fastcgi_params;
+#             fastcgi_pass 127.0.0.1:9000;
+#             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#             fastcgi_param PATH_INFO $fastcgi_script_name;
+#         }
+#         if ($request_method !~* ^(GET|POST)$ ) {
+#             return 405;
+#         }
+#     }
+    
 # }
